--- a/views/layouts/cabinet.ejs
+++ b/views/layouts/cabinet.ejs
@@ -15,7 +15,7 @@
 <div id="enter-point"></div>
 
 
-<script src="/bower_components/react/react-with-addons.js"></script>
+<script src="/bower_components/react/react-with-addons.min.js"></script>
 <script src="/js/bundle.js"></script>
 </body>
 </html>
